--- a/products/images.html
+++ b/products/images.html
@@ -556,7 +556,7 @@
     <img src="https://unlim8ted.com/images/Unlim8tedImages/space with foregroudn.jpg" alt="Image 8">
     <img src="https://unlim8ted.com/images/Unlim8tedImages/styalized duck.jpg" alt="Image 1">
     <img src="https://unlim8ted.com/images/Unlim8tedImages/0423251200_HDR.jpg" alt="Image 2">
-    <img src="https://unlim8ted.com/images/Unlim8tedImages/0424250818_HDR.jpg alt="Image 3">
+    <img src="https://unlim8ted.com/images/Unlim8tedImages/0424250818_HDR.jpg" alt="Image 3">
     <img src="https://unlim8ted.com/images/Unlim8tedImages/0421251237~2.jpg" alt="Image 4">
     <img src="https://unlim8ted.com/images/Unlim8tedImages/0423250459b.jpg" alt="Image 5"><!--
     <img src="https://unlim8ted.com/images/Unlim8tedImages/" alt="Image 6">
