--- a/products/music.html
+++ b/products/music.html
@@ -632,6 +632,13 @@
                     View PDF
                 </a>
             </div>
+            <div class="song-item" onclick="playTrack('Sharp Strings.mid', 'Sharp Strings.mp3')">
+                Sharp Strings
+                <br>
+                <a class="pdf-link" href="https://unlim8ted.com/music/pdf's/Sharp Strings-Score_and_Parts.pdf" target="_blank">
+                    View PDF
+                </a>
+            </div>
             <p id="footer-text">&copy; 2019-2025 Unlim8ted Studio Productions. All rights reserved.</p>
             <script>document.addEventListener("DOMContentLoaded", function () {
                 const currentYear = new Date().getFullYear();
