add new picture of lightning

--- a/products/images.html
+++ b/products/images.html
@@ -558,7 +558,8 @@
     <img src="https://unlim8ted.com/images/Unlim8tedImages/0423251200_HDR.jpg" alt="Image 2">
     <img src="https://unlim8ted.com/images/Unlim8tedImages/0424250818_HDR.jpg" alt="Image 3">
     <img src="https://unlim8ted.com/images/Unlim8tedImages/0421251237~2.jpg" alt="Image 4">
-    <img src="https://unlim8ted.com/images/Unlim8tedImages/0423250459b.jpg" alt="Image 5"><!--
+    <img src="https://unlim8ted.com/images/Unlim8tedImages/0423250459b.jpg" alt="Image 5">
+    <img src="https://unlim8ted.com/images/Unlim8tedImages/lightning.jpg" alt="Image 5"><!--
     <img src="https://unlim8ted.com/images/Unlim8tedImages/" alt="Image 6">
     <img src="https://unlim8ted.com/images/Unlim8tedImages/" alt="Image 7">
     <img src="https://unlim8ted.com/images/Unlim8tedImages/" alt="Image 8">
