--- a/tools/calendar.html
+++ b/tools/calendar.html
@@ -115,86 +115,126 @@
         const CLIENT_ID = '657222021545-6cie7sk23lanq2t6oj7t6ijs404nav4g.apps.googleusercontent.com';
         const SCOPES = 'https://www.googleapis.com/auth/calendar.readonly https://www.googleapis.com/auth/tasks.readonly';
 
-        let isGapiInitialized = false;
+        let tokenClient;
+    let isGapiInitialized = false;
+    let isGisInitialized = false;
+    let allEvents = [];
 
-        function handleClientLoad() {
-            gapi.load('client:auth2', initClient);
-        }
-
-        function initClient() {
-            gapi.client.init({
-                clientId: CLIENT_ID,
-                scope: SCOPES,
+    // Load GAPI client and initialize Calendar/Tasks APIs
+    function gapiLoaded() {
+        gapi.load('client', async () => {
+            await gapi.client.init({
                 discoveryDocs: [
                     "https://www.googleapis.com/discovery/v1/apis/calendar/v3/rest",
                     "https://www.googleapis.com/discovery/v1/apis/tasks/v1/rest"
                 ]
-            }).then(() => {
-                isGapiInitialized = true;
-                const authInstance = gapi.auth2.getAuthInstance();
-                authInstance.isSignedIn.listen(updateSigninStatus);
-                updateSigninStatus(authInstance.isSignedIn.get());
-            }).catch(error => {
-                console.error("gapi.client.init failed", error);
             });
-        }
+            isGapiInitialized = true;
+            maybeEnableSignin();
+        });
+    }
 
-        function updateSigninStatus(isSignedIn) {
-            if (isSignedIn) {
-                loadCalendarEvents();
-                listTasks();
-            } else {
-                document.getElementById("calendar-events").innerText = "Not signed in.";
-                document.getElementById("tasks-list").innerText = "Not signed in.";
+    // Load GIS and initialize token client
+    function gisLoaded() {
+        tokenClient = google.accounts.oauth2.initTokenClient({
+            client_id: CLIENT_ID,
+            scope: SCOPES,
+            callback: (tokenResponse) => {
+                if (tokenResponse.error) {
+                    console.error(tokenResponse);
+                    return;
+                }
+                updateSigninStatus(true);
             }
+        });
+        isGisInitialized = true;
+        maybeEnableSignin();
+    }
+
+    function maybeEnableSignin() {
+        if (isGapiInitialized && isGisInitialized) {
+            document.getElementById('signin-button').disabled = false;
         }
+    }
 
-        function signIn() {
-            if (!isGapiInitialized) {
-                console.error("GAPI not initialized");
-                return;
-            }
-            gapi.auth2.getAuthInstance().signIn();
+    function signIn() {
+        if (!isGapiInitialized || !isGisInitialized) {
+            console.error("GAPI or GIS not initialized");
+            return;
         }
+        tokenClient.requestAccessToken();
+    }
 
-        function signOut() {
-            if (!isGapiInitialized) {
-                console.error("GAPI not initialized");
-                return;
-            }
-            gapi.auth2.getAuthInstance().signOut();
+    function updateSigninStatus(signedIn) {
+        if (signedIn) {
+            loadCalendarEvents();
+            listTasks();
+        } else {
+            document.getElementById("calendar-events").innerText = "Not signed in.";
+            document.getElementById("tasks-list").innerText = "Not signed in.";
         }
+    }
 
-        let allEvents = [];
+    function signOut() {
+        google.accounts.oauth2.revoke(tokenClient.access_token, () => {
+            updateSigninStatus(false);
+        });
+    }
 
-        function loadCalendarEvents() {
-            gapi.client.calendar.calendarList.list().then(calendarResponse => {
-                const calendars = calendarResponse.result.items;
+    function loadCalendarEvents() {
+        allEvents = [];
+        gapi.client.calendar.calendarList.list().then(calendarResponse => {
+            const calendars = calendarResponse.result.items;
+            let pending = calendars.length;
+            if (pending === 0) return;
 
-                let pending = calendars.length;
-                if (pending === 0) return;
-
-                calendars.forEach(cal => {
-                    gapi.client.calendar.events.list({
-                        calendarId: cal.id,
-                        timeMin: new Date().toISOString(),
-                        maxResults: 50,
-                        singleEvents: true,
-                        orderBy: 'startTime'
-                    }).then(eventResponse => {
-                        const events = eventResponse.result.items.map(event => ({
-                            title: event.summary,
-                            start: event.start.dateTime || event.start.date,
-                            end: event.end?.dateTime || event.end?.date,
-                            backgroundColor: cal.backgroundColor || '#3788d8'
-                        }));
-                        allEvents = allEvents.concat(events);
-                        pending--;
-                        if (pending === 0) renderCalendar();
-                    });
+            calendars.forEach(cal => {
+                gapi.client.calendar.events.list({
+                    calendarId: cal.id,
+                    timeMin: new Date().toISOString(),
+                    maxResults: 50,
+                    singleEvents: true,
+                    orderBy: 'startTime'
+                }).then(eventResponse => {
+                    const events = eventResponse.result.items.map(event => ({
+                        title: event.summary,
+                        start: event.start.dateTime || event.start.date,
+                        end: event.end?.dateTime || event.end?.date,
+                        backgroundColor: cal.backgroundColor || '#3788d8'
+                    }));
+                    allEvents = allEvents.concat(events);
+                    pending--;
+                    if (pending === 0) renderCalendar(); // <- implement this function if needed
                 });
             });
-        }
+        });
+    }
+
+    function listTasks() {
+        gapi.client.tasks.tasklists.list().then(resp => {
+            const taskList = resp.result.items?.[0];
+            if (!taskList) return;
+
+            gapi.client.tasks.tasks.list({ tasklist: taskList.id }).then(res => {
+                const tasks = res.result.items;
+                const container = document.getElementById("tasks-list");
+                container.innerHTML = '';
+                if (tasks?.length) {
+                    tasks.forEach(task => {
+                        container.innerHTML += `<p>${task.title}</p>`;
+                    });
+                } else {
+                    container.innerText = 'No tasks found.';
+                }
+            });
+        });
+    }
+
+    // Load GAPI and GIS when page is ready
+    window.onload = () => {
+        gapiLoaded();
+        gisLoaded();
+    };
 
         function renderCalendar() {
             const calendarEl = document.getElementById('calendar');
