--- a/tools/calendar.html
+++ b/tools/calendar.html
@@ -100,9 +100,7 @@
 
     <!-- FullCalendar CSS & JS -->
     <link href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
-    <script src="weather.js"></script>
+    <script src='https://cdn.jsdelivr.net/npm/fullcalendar/index.global.min.js'></script>    <script src="weather.js"></script>
     <link rel="stylesheet" type="text/css" href="weather.css">
 
     <script src="https://accounts.google.com/gsi/client" async defer></script>
@@ -323,7 +321,7 @@
     <div class="container">
         <div class="calendar">
             <h2>Calendar</h2>
-            <div id="calendar-events">Loading events...</div>
+            <div id="calendar">Loading events...</div>
         </div>
         <div class="tasks">
             <h2>Tasks</h2>
