--- a/tools/calendar.html
+++ b/tools/calendar.html
@@ -311,7 +311,7 @@
         });
     </script>
 
-    .
+    
 
     <header>Overiew Dashboard</header>
     <div class="auth-section">
@@ -320,8 +320,7 @@
     </div>
     <div class="container">
         <div class="calendar">
-            <h2>Calendar</h2>
-            <div id="calendar">Loading events...</div>
+            <div id="calendar">Loading...</div>
         </div>
         <div class="tasks">
             <h2>Tasks</h2>
