add most of new TimeCat page, WebGL still building

--- a/products/software.html
+++ b/products/software.html
@@ -577,8 +577,8 @@
                     alt="Square Pixels">
                 <h3>Square Pixels</h3>
             </a>
-            <a href="product#TimeCat" class="item-box" data-category="entertainment">
-                <img src="https://unlim8ted.com/images/products/software/placeholder.png"
+            <a href="TimeCat" class="item-box" data-category="entertainment">
+                <img src="https://unlim8ted.com/images/products/software/timecat.webp"
                     alt="TimeCat">
                 <h3>TimeCat</h3>
             </a>
