Remove class 'reveal' from music section
Because not detecting intersection on some devices for some reason.

--- a/products/TimeCat/index.html
+++ b/products/TimeCat/index.html
@@ -2762,7 +2762,7 @@ document.addEventListener("DOMContentLoaded", () => {
         </div>
       </section>
     </main>
-    <section id="music" class="reveal">
+    <section id="music">
       <div class="section-header">
         <div>
           <div class="section-eyebrow">Music</div>
