--- a/products/TimeCat/WebGL/index.html
+++ b/products/TimeCat/WebGL/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/WebGL.loader.js";
       var config = {
-        dataUrl: buildUrl + "/WebGL.data.br",
+        dataUrl: ['WebGL.data.br.00', 'WebGL.data.br.01'],
         frameworkUrl: buildUrl + "/WebGL.framework.js.br",
-        codeUrl: buildUrl + "/WebGL.wasm.br",
+        codeUrl: "WebGL.wasm.br",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Unlim8ted Studio Productions",
         productName: "TimeCat",
