re-add warning to WEBGl timecat build

--- a/products/TimeCat/WebGL/index.html
+++ b/products/TimeCat/WebGL/index.html
@@ -22,19 +22,19 @@
           </div>
         </div>
         <!-- Footer is OUTSIDE the canvas container -->
-<footer id="unity-footer">
-  <div id="unity-webgl-logo"></div>
-  <div style="flex:1"></div>
-  <div id="unity-build-title"></div>
-  <div id="unity-fullscreen-button"></div>
-</footer>
+        <footer id="unity-footer">
+          <div id="unity-webgl-logo"></div>
+          <div style="flex:1"></div>
+          <div id="unity-build-title"></div>
+          <div id="unity-fullscreen-button"></div>
+        </footer>
 
       </div>
 
     </div>
   </div>
 
-
+  <div id="unity-warning"> </div>
 
   </div>
   <script>
