start to add components and set up store fully

--- a/products/games/index.html
+++ b/products/games/index.html
@@ -562,7 +562,7 @@
     <div id="games" class="content-section">
         <h1>Games</h1>
         <div class="search-bar">
-            <input type="text" id="games-search" placeholder="Search music...">
+            <input type="text" id="games-search" placeholder="Search games...">
             <select id="games-filter">
                 <option value="all">All</option>
                 <option value="card games">Card Games</option>
@@ -572,7 +572,17 @@
                 <!-- Add more filter options as needed -->
             </select>
         </div>
-        <div class="item-category" id="music-items">
+        <div class="item-category" id="game-items">
+            <a href="square-pixels" class="item-box" data-category="entertainment">
+                <img src="https://unlim8ted.com/images/products/software/Screenshot 2023-09-21 181742(1).png"
+                    alt="Square Pixels">
+                <h3>Square Pixels</h3>
+            </a>
+            <a href="TimeCat" class="item-box" data-category="puzzles">
+                <img src="https://unlim8ted.com/images/products/software/timecat.webp"
+                    alt="TimeCat">
+                <h3>TimeCat</h3>
+            </a>
             <a href="/products/squareproduct#the-life-of-a-meatball-jigsaw-puzzle/20"
                 class="item-box" data-category="puzzles">
                 <img src="https://unlim8ted.com\images\products\games\image.webp" alt="">
